# motion_kinect

./: CMakeLists.txt  README.md  package.xml  setup.bash
include/: motion_kinect.hpp
launch/: kinect_t3_motion.sh  tf_reader.launch  turtlebot3_motion.launch
nodes/: tf_reader.py
rviz/: kinect2_tracker.rviz
src/: motion_kinect_node.cpp
