<?xml version="1.0"?>
<package format="2">
  <name>motion_kinect</name>
  <version>0.0.0</version>
  <description>The ros-motion_kinect package</description>
  <maintainer email="danial.rahman@dwebly.com">Danial RAHMAN</maintainer>
  <author email="danial.rahman@dwebly.com">Danial RAHMAN</author>
  <license>GPL</license>

<!-- BUILD TOOL DEPEND -->
  <buildtool_depend>catkin</buildtool_depend>

<!-- BUILD DEPEND -->
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>

<!-- ############    KINECT    ##################################################################################################################################### -->
  <build_depend>cmake_modules</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>kdl_conversions</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>glut</build_depend>
  <build_depend>libxmu-dev</build_depend>
  <build_depend>libxi-dev</build_depend>
  <build_depend>message_generation</build_depend>
<!-- ############################################################################################################################################################### -->






<!-- BUILD EXPORT DEPEND -->
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>tf</build_export_depend>

<!-- EXEC DEPEND -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf</exec_depend>

<!-- ############    KINECT    ##################################################################################################################################### -->
  <exec_depend>cmake_modules</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>kdl_conversions</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>message_runtime</exec_depend>
<!-- ############################################################################################################################################################### -->

  <export>
  </export>
</package>
